<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view14"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient" />

    <View
        android:id="@+id/view15"
        android:layout_width="380dp"
        android:layout_height="220dp"
        android:background="@drawable/shape_rectangle_four_radius"
        app:layout_constraintBottom_toBottomOf="@+id/view14"
        app:layout_constraintEnd_toEndOf="@+id/view14"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/view14"
        app:layout_constraintTop_toTopOf="@+id/view14"
        app:layout_constraintVertical_bias="0.068" />

    <View
        android:id="@+id/view16"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/grey_oval_shape"
        app:layout_constraintEnd_toEndOf="@+id/view15"
        app:layout_constraintBottom_toBottomOf="@+id/view15"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="@+id/view15"
        app:layout_constraintTop_toTopOf="@+id/view15"
        app:layout_constraintVertical_bias="0.221"/>

    <View
        android:id="@+id/view17"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/grey_oval_shape"
        app:layout_constraintBottom_toBottomOf="@id/view16"
        app:layout_constraintEnd_toEndOf="@+id/view15"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toEndOf="@+id/view16"
        app:layout_constraintTop_toTopOf="@+id/view16"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/view16"
        app:layout_constraintEnd_toEndOf="@+id/view16"
        app:layout_constraintStart_toStartOf="@+id/view16"
        app:layout_constraintTop_toTopOf="@+id/view16"
        app:srcCompat="@drawable/__icon__call_"
        android:contentDescription="@string/call_icon" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/view17"
        app:layout_constraintEnd_toEndOf="@+id/view17"
        app:layout_constraintStart_toStartOf="@+id/view17"
        app:layout_constraintTop_toTopOf="@+id/view17"
        app:srcCompat="@drawable/__icon__message_"
        android:contentDescription="@string/message_icon" />

    <View
        android:id="@+id/view18"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/grey_oval_shape"
        app:layout_constraintBottom_toBottomOf="@+id/view17"
        app:layout_constraintEnd_toStartOf="@+id/view17"
        app:layout_constraintStart_toEndOf="@+id/view16"
        app:layout_constraintTop_toTopOf="@+id/view16" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/view16"
        app:layout_constraintEnd_toStartOf="@+id/view17"
        app:layout_constraintStart_toEndOf="@+id/view16"
        app:layout_constraintTop_toTopOf="@+id/view17"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:contentDescription="@string/add_button" />

    <TextView
        android:id="@+id/text"
        android:layout_width="178dp"
        android:layout_height="33dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/customer_name"
        android:textColor="@color/app_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view15"
        app:layout_constraintEnd_toEndOf="@+id/view15"
        app:layout_constraintStart_toStartOf="@+id/view15"
        app:layout_constraintTop_toBottomOf="@+id/view18"
        app:layout_constraintVertical_bias="0.17000002" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:background="@drawable/green_button"
        android:text="@string/drop_completed"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view15"
        app:layout_constraintEnd_toEndOf="@+id/view17"
        app:layout_constraintStart_toStartOf="@+id/view16"
        app:layout_constraintTop_toBottomOf="@+id/text" />


</androidx.constraintlayout.widget.ConstraintLayout>