<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient" />

    <View
        android:id="@+id/view10"
        android:layout_width="380dp"
        android:layout_height="220dp"
        android:background="@drawable/shape_rectangle_four_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view9"
        app:layout_constraintVertical_bias="0.068" />

    <View
        android:id="@+id/view11"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/grey_oval_shape"
        app:layout_constraintBottom_toBottomOf="@+id/view10"
        app:layout_constraintEnd_toEndOf="@+id/view10"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="@+id/view10"
        app:layout_constraintTop_toTopOf="@+id/view10"
        app:layout_constraintVertical_bias="0.221" />

    <View
        android:id="@+id/view12"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/grey_oval_shape"
        app:layout_constraintBottom_toBottomOf="@+id/view11"
        app:layout_constraintEnd_toEndOf="@+id/view10"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toEndOf="@+id/view11"
        app:layout_constraintTop_toTopOf="@+id/view11"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/view11"
        app:layout_constraintEnd_toEndOf="@+id/view11"
        app:layout_constraintStart_toStartOf="@+id/view11"
        app:layout_constraintTop_toTopOf="@+id/view11"
        app:srcCompat="@drawable/__icon__call_" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/view12"
        app:layout_constraintEnd_toEndOf="@+id/view12"
        app:layout_constraintStart_toStartOf="@+id/view12"
        app:layout_constraintTop_toTopOf="@+id/view12"
        app:srcCompat="@drawable/__icon__message_" />

    <View
        android:id="@+id/view13"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/grey_oval_shape"
        app:layout_constraintBottom_toBottomOf="@+id/view11"
        app:layout_constraintEnd_toStartOf="@+id/view12"
        app:layout_constraintStart_toEndOf="@+id/view11"
        app:layout_constraintTop_toTopOf="@+id/view12" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="46dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/view12"
        app:layout_constraintEnd_toStartOf="@+id/view12"
        app:layout_constraintStart_toEndOf="@+id/view11"
        app:layout_constraintTop_toTopOf="@+id/view12"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <TextView
        android:id="@+id/text"
        android:layout_width="178dp"
        android:layout_height="33dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/customer_name"
        android:textColor="@color/app_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view10"
        app:layout_constraintEnd_toEndOf="@+id/view10"
        app:layout_constraintStart_toStartOf="@+id/view10"
        app:layout_constraintTop_toBottomOf="@+id/view13"
        app:layout_constraintVertical_bias="0.17000002" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_otp"
        android:background="@drawable/blue_stock"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/view11"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <Button
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:background="@drawable/green_button"
        android:backgroundTint="#00B112"
        android:text="@string/pickup"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/view12"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber" />


</androidx.constraintlayout.widget.ConstraintLayout>